fix small layout issue in scss

--- a/src/assets/scss/layout/Sections/_section4.scss
+++ b/src/assets/scss/layout/Sections/_section4.scss
@@ -36,7 +36,9 @@
 
   &>p {
     text-align: center;
-    margin: 60px auto;
+    margin: auto;
+    padding-top: 30px;
+    height: 120px;
     width: 40%;
     font-size: 18px;
   }
